--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -77,54 +77,17 @@ jobs:
               with:
                   oc_version: 'latest'
 
-        ####### Need to set up prod namespace on openshift
-    # https://github.com/bcgov-nr/action-builder-ghcr
-    builds:
-        name: Builds
-        runs-on: ubuntu-22.04
-        needs: [build]
-        permissions:
-            packages: write
-        strategy:
-            matrix:
-                package: [bc-emli-pin-mgmt-be]
-                include:
-                    - package: bc-emli-pin-mgmt-be
-                      build_context: ./
-                      triggers: ('bc-emli-pin-mgmt-be/')
-                      build_file: Dockerfile
-        timeout-minutes: 10
-        steps:
-            - uses: bcgov-nr/action-builder-ghcr@v2.0.0
-              with:
-                  keep_versions: 50
-                  package: ${{ matrix.package }}
-                  build_context: ${{ matrix.build_context }}
-                  tag: latest
-                  triggers: ${{ matrix.triggers }}
+            - name: Login to Openshift
+              shell: bash
+              run: |
+                oc login --server=${{ secrets.OPENSHIFT_LOGIN_REGISTRY }} --token=${{ secrets.OC_TOKEN_PROD }}
 
-    deploys:
-        name: Deploys Backend
-        needs: [builds]
-        environment: tools
-        permissions:
-            issues: write
-        runs-on: ubuntu-22.04
-        strategy:
-            matrix:
-                name: [bc-emli-pin-mgmt-be]
-                include:
-                    - name: bc-emli-pin-mgmt-be
-                      file: ./.deployment/prod.deploy.yml
-                      overwrite: true
+            - name: Switch to correct project environment in Openshift
+              shell: bash
+              run: |
+                oc project ${{ secrets.OPENSHIFT_NAMESPACE_PROD }}
 
-        steps:
-            - uses: bcgov-nr/action-deployer-openshift@v2.0.0
-              with:
-                  file: ${{ matrix.file }}
-                  oc_namespace: ${{ vars.OC_NAMESPACE_PROD }}
-                  oc_server: ${{ vars.OC_SERVER }}
-                  oc_token: ${{ secrets.OC_TOKEN_PROD }}
-                  overwrite: ${{ matrix.overwrite }}
-                  parameters: -p ZONE=prod
-                  repository: ${{ matrix.repository }}
+            - name: Build image on OpenShift
+              shell: bash
+              run: |
+                oc start-build ${{ secrets.OPENSHIFT_BUILDCONFIG }}
